--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <script src="https://kit.fontawesome.com/917aa4b7d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Bootstrap Template</title>
+    <title>QR code</title>
 </head>
 
 <body>
 
-    <main class="text-center">
-
-        <h1 class="display-1">Bootstrap Template</h1>
-    </main>
+    <main class="container">
+        <div class="qr-code">
+          <img src="./assets/image-qr-code.png" alt="QR-Code" />
+          <div class="head">Improve your front-end skills by building projects</div>
+          <div class="text">
+            Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>
+            the next level
+          </div>
+        </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
