--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/103868399.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/917aa4b7d7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./assets/103868399.png" type="image/x-icon">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <script src="https://kit.fontawesome.com/917aa4b7d7.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./css/style.css">
 
-    <title>QR code</title>
+  <title>QR code</title>
 </head>
 
 <body>
 
-    <main class="container">
-        <div class="qr-code">
-          <img src="./assets/image-qr-code.png" alt="QR-Code" />
-          <div class="head">Improve your front-end skills by building projects</div>
-          <div class="text">
-            Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br>
-            the next level
-          </div>
-        </main>
-    <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/script.js"></script>
+  <main class="card_container">
+    <div class="img_container">
+      <img src="./assets/image-qr-code.png" alt="">
+    </div>
+    <div class="text_container">
+      <h2>Improve your front-end skills by building projects</h2>
+      <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
+    </div>
+  </main>
+  <script src="./js/bootstrap.bundle.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
