--- a/index.html
+++ b/index.html
@@ -16,13 +16,33 @@
 
 <body>
 
-  <main class="card_container">
-    <div class="img_container">
-      <img src="./assets/image-qr-code.png" alt="">
-    </div>
-    <div class="text_container">
-      <h2>Improve your front-end skills by building projects</h2>
-      <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
+  <main>
+    <div class="content-wrap">
+      <div class="main-img">
+        <img src="images/illustration-hero.svg" alt="" />
+      </div>
+      <div class="mid-section">
+        <h1>Order Summary</h1>
+        <p>
+          You can now listen to millions of <br>songs, audiobooks, and podcasts on <br>
+          any device anywhere you like!
+        </p>
+      </div>
+      <div class="plan-wrap">
+        <div class="plan">
+          <img src="images/icon-music.svg" alt="">
+          <div class="annual">
+            <h4>Annual Plan</h4>
+            <p>$59.99/year</p>
+          </div>
+          <a href="">Change</a>
+        </div>
+      </div>
+
+      <div class="payment">
+        Proceed to Payment
+      </div>
+      <div class="cancel-order"> Cancel Order</div>
     </div>
   </main>
   <script src="./js/bootstrap.bundle.min.js"></script>
