--- a/index.html
+++ b/index.html
@@ -11,38 +11,40 @@
   <script src="https://kit.fontawesome.com/917aa4b7d7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>QR code</title>
+  <title>Order Summary</title>
 </head>
 
 <body>
 
   <main>
-    <div class="content-wrap">
-      <div class="main-img">
-        <img src="images/illustration-hero.svg" alt="" />
+    <div class="card-container">
+      <div class="card-img">
+        <img src="./assets/illustration-hero.svg" alt="" />
       </div>
-      <div class="mid-section">
-        <h1>Order Summary</h1>
-        <p>
-          You can now listen to millions of <br>songs, audiobooks, and podcasts on <br>
-          any device anywhere you like!
-        </p>
-      </div>
-      <div class="plan-wrap">
-        <div class="plan">
-          <img src="images/icon-music.svg" alt="">
+
+      <div class="text-container">
+        <div class="order-summary-container">
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of <br>songs, audiobooks, and podcasts on <br>
+            any device anywhere you like!
+          </p>
+        </div>
+        <div class="plan-container">
+          <img src="./assets//icon-music.svg" alt="">
           <div class="annual">
             <h4>Annual Plan</h4>
             <p>$59.99/year</p>
           </div>
           <a href="">Change</a>
         </div>
+        <button class="payment">
+          Proceed to Payment
+        </button>
+        <div class="cancel-order"> Cancel Order</div>
       </div>
+      
 
-      <div class="payment">
-        Proceed to Payment
-      </div>
-      <div class="cancel-order"> Cancel Order</div>
     </div>
   </main>
   <script src="./js/bootstrap.bundle.min.js"></script>
