--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
 
-    <main class="text-center">
+    <main class="menu">
 
-        <h1 class="display-1">Bootstrap Template</h1>
+        d
     </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
