--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
 <body>
 
     <main class="menu">
-
-        d
+        <div class="menu-img-container"> 
+            <img src="./assets/image-omelette.jpeg" alt="menu-img">
+        </div>
+        <div class="menu-text-container">
+            <div class="heading-text-container">
+                <h1> Simple Omelette Recipe</h1>
+                <p> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+                    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+                  </p>
+            </div>
+        </div>
     </main>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
